# godot-showreel-voting

./: .gitignore  Dockerfile  LICENSE.txt  README.md  compose.yml  docker-compose.yml  main.py  makesuperuser.py  manage.py  pull-update.sh  pyproject.toml  requirements.txt
deployment/: README.md  cloud_config.yml  guided_setup.sh
gdshowreelvote/: Dockerfile  auth.py  database.py  makesuperuser.py  requirements.txt  settings.py  utils.py
gdshowreelvote/blueprints/: forms.py  votes.py
gdshowreelvote/gdshowreelvote/: asgi.py  settings.py  urls.py  wsgi.py
gdshowreelvote/vote/: admin.py  auth.py  context_processors.py  forms.py  models.py  urls.py  views.py
gdshowreelvote/vote/migrations/: 0001_initial.py
gdshowreelvote/vote/templates/: base.html
instance/: example-config.py
migrations/versions/: 4278cd52c364_.py  460a68f9dc36_.py  727eb738db92_.py  8c12d32e406b_.py  9c4941bf5f3c_.py  bd7db720448f_.py  f2cbdb804d58_.py
nginx/: Dockerfile  mime.types  nginx.conf
static/css/1.1/: base.css  nav.css
templates/: about.html  admin.html  before-you-vote.html  default.html  history.html  home.html  macros.html  mock-login.html  pagination.html  video-view.html  vote.html
vote/: context_processors.py  forms.py  models.py  urls.py  views.py
vote/migrations/: 0002_alter_showreel_status.py  0003_add_email_and_download_fields.py  0004_auto_20250814_2001.py  0005_auto_20250815_1115.py
vote/templates/: base.html
vote/templates/admin/: index.html
vote/templates/includes/: login_button.html  navbar.html
vote/templates/registration/: base_login.html  (+2 more)
(+20 files in other folders)
